; ModuleID = '/home/carl/AnghaBench/php-src/ext/hash/sha3/generic32lc/extr_KeccakP-1600-inplace32BI.c_KeccakP1600_AddByte.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/hash/sha3/generic32lc/extr_KeccakP-1600-inplace32BI.c_KeccakP1600_AddByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @KeccakP1600_AddByte(i8* %0, i8 zeroext %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8 %1, i8* %5, align 1
  store i32 %2, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = udiv i32 %15, 8
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %6, align 4
  %18 = urem i32 %17, 8
  store i32 %18, i32* %8, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = bitcast i8* %19 to i32*
  store i32* %20, i32** %14, align 8
  %21 = load i32, i32* %8, align 4
  %22 = icmp ult i32 %21, 4
  br i1 %22, label %23, label %29

23:                                               ; preds = %3
  %24 = load i8, i8* %5, align 1
  %25 = zext i8 %24 to i32
  %26 = load i32, i32* %8, align 4
  %27 = mul i32 %26, 8
  %28 = shl i32 %25, %27
  store i32 %28, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %36

29:                                               ; preds = %3
  store i32 0, i32* %9, align 4
  %30 = load i8, i8* %5, align 1
  %31 = zext i8 %30 to i32
  %32 = load i32, i32* %8, align 4
  %33 = sub i32 %32, 4
  %34 = mul i32 %33, 8
  %35 = shl i32 %31, %34
  store i32 %35, i32* %10, align 4
  br label %36

36:                                               ; preds = %29, %23
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %10, align 4
  %39 = load i32*, i32** %14, align 8
  %40 = load i32, i32* %7, align 4
  %41 = mul i32 %40, 2
  %42 = add i32 %41, 0
  %43 = zext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %39, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = load i32*, i32** %14, align 8
  %47 = load i32, i32* %7, align 4
  %48 = mul i32 %47, 2
  %49 = add i32 %48, 1
  %50 = zext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %46, i64 %50
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* %11, align 4
  %54 = load i32, i32* %12, align 4
  %55 = load i32, i32* %13, align 4
  %56 = call i32 @toBitInterleavingAndXOR(i32 %37, i32 %38, i32 %45, i32 %52, i32 %53, i32 %54, i32 %55)
  ret void
}

declare dso_local i32 @toBitInterleavingAndXOR(i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
